# mind

./: .gitignore  Makefile  Project_Summary_Report.md  README.md  cleanup_inventory.md  env.example  environment.yml  phase0_baseline_report.json  pyproject.toml  requirements.txt
configs/data/: dash_b.yaml  hpope.yaml  pope.yaml  repope.yaml
configs/models/: internvl3_5_8b.yaml  internvl3_5_8b_local.yaml  llava_onevision_7b.yaml  llava_onevision_7b_local.yaml  molmo_7b_d_0924.yaml  molmo_7b_d_0924_local.yaml  qwen3_5_4b.yaml  qwen3_vl_4b.yaml  qwen3_vl_8b.yaml  qwen3_vl_8b_local.yaml
configs/stage0/: internvl_pope_popular_smoke.yaml  qwen_internvl_stage0_full.yaml  qwen_pope_popular_smoke.yaml  stage0_complete.yaml
docs/: .gitignore  DESIGN_NOTES.md  STAGE0.md  STAGE_A.md  STAGE_A_ENTRYPOINT.md  fa2_validation_report.md  glsim_isolation_check.md  migration_to_a100_server.md  paper_outline.md  results_summary.md
docs/_archive/: README.md
journal/: progress.md
scripts/: build_manifolds.py  cache_reference_states.py  compute_baselines.py  compute_drift.py  evaluate.py  export_paper_package.py  extract_eval_states.py  extract_readout_states.py  plot_results.py  prepare_data.py  prepare_decisive_bank_identity.py  prepare_decisive_goal1.py  prepare_decisive_layer_scan.py  run_experiment.py  run_glsim.py  run_glsim_adapted.py  run_halp.py  stage0_audit_data.py  stage0_build_splits.py  stage0_extract_full_layer_cache.py  stage0_run.py  stage0_validate_cache.py  stage_a_build_family_splits.py  stage_a_preflight.py  stage_a_run.py  train_detector.py  verify_env.py
(+236 files in other folders)
